Adds Multi-Stage Dockerfile